SEC-GROUP/sec-gr-main.tf
resource "aws_security_group" "scg-tf-22-80" {
  name        = "${var.vpc-name}-sg"
  description = "allows SSH and HTTP"
  vpc_id      = var.vpc-id
  tags        = { NAME = "${var.vpc-name}-sg" }
  ingress {
    description = "allow ssh"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
    description = "allow http"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  egress {
    description = "allow all outbound"
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
